--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+
     <!-- bootstrap css links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
 
     <!-- googole fonts -->
     <!-- Source Code Pro -->
@@ -14,15 +18,25 @@
     <!-- Audiowide -->
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
     <!-- BIZ UDMincho -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet">
     <!-- Bree Serif -->
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <!-- Rajdhani -->
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+
 
 
     <!-- custom css link -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/mediaQueries.css">
 
+
+
+    <!-- fontawsome link -->
+    <script src="https://kit.fontawesome.com/62bfe66902.js" crossorigin="anonymous"></script>
+
+
+    <!-- favicon link -->
     <link rel="shortcut icon" href="./image/favicon.png" type="image/x-icon">
 
     <title>Nirvik Purkait | Profile</title>
@@ -86,12 +100,13 @@
 
 
 <!-- _____________________________________________________________________________________________ -->
-
+<!-- starting of footer section -->
 
 
     <section id="footer" class="footer">
 
         <div class="row">
+
             <div class="col-md-6 reviewSection">
 
                 <form action="">
@@ -118,21 +133,57 @@
             </div>
 
 
-            <div class="col-md-6">
-                <div class="resumeSection">
-                    Loved the work?
-                    <br>
-                    Have a resume!
-                </div>
+            <div class="col-md-6 resumeSection">
+
+                    <div class="textSection">
+                        <span class="text1">Loved the work?</span>
+                        <span class="text2">Have a resume!</span>
+                    </div>
+
+                    <div class="resumeButton">
+                        <button>Download Resume</button>
+                    </div>
+
+                    <div class="connectionSection">
+                        <div class="row">
+
+                            <div class="col facebook">
+                                <a href="#" class="social"><i class="fa-brands fa-facebook-f"></i></a>
+                            </div>
+
+                            <div class="col twitter">
+                                <a href="#" class="social"><i class="fa-brands fa-twitter"></i></a>
+                            </div>
+
+                            <div class="col instagram">
+                                <a href="#" class="social"><i class="fa-brands fa-instagram"></i></a>
+                            </div>
+
+                            <div class="col linkedin">
+                                <a href="#" class="social"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+
+                            <div class="col whatsapp">
+                                <a href="#" class="social"><i class="fa-brands fa-whatsapp"></i></a>
+                            </div>
+
+                            <div class="col github">
+                                <a href="#" class="social"><i class="fa-brands fa-github"></i></a>
+                            </div>
+
+                        </div>
+                    </div>
             </div>
+            
         </div>
+
+
+        <div class="copyright">© Nirvik Purkait all copyright reserve.</div>
 
     </section>
 
-
-
-
-    <!-- _________________________________________________________________________________________ -->
+<!-- end of footer secction -->
+<!-- __________________________________________________________________________________________________ -->
 
 
 
