added hover effect to the resume button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#" class="navLinks galary">Galary</a>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks contact">Contact</a>
+                        <a href="#footer" class="navLinks contact">Contact</a>
                     </li>
                 </ul>
 
@@ -93,13 +93,20 @@
 
 
 
+<!-- end of header -->
+<!-- __________________________________________________________________________________________________ -->
+<!-- starting of content section -->
+
+
+    <section class="content" id="content">
+
+    </section>
 
 
 
 
-
-
-<!-- _____________________________________________________________________________________________ -->
+<!-- end of contentsection -->
+<!-- __________________________________________________________________________________________________ -->
 <!-- starting of footer section -->
 
 
