--- a/index.html
+++ b/index.html
@@ -55,16 +55,40 @@
 
                 <ul class="navList navListSm">
                     <li class="navItems">
-                        <a href="index.html" class="navLinks about">About</a>
+                        <a href="#" class="navLinks about">
+                            About 
+                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                            <div class="dropdownList">
+                                <ul>
+                                    <li>
+                                        <a href="#">Skill</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Certification</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Educational Detais</a>
+                                    </li>
+                                </ul>
+                            </div>                        
+                        </a>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks work">Work</a>
+                        <a href="#" class="navLinks work">
+                            Work 
+                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                        </a>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks galary">Galary</a>
+                        <a href="#" class="navLinks galary">
+                            Galary 
+                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                        </a>
                     </li>
                     <li class="navItems">
-                        <a href="#footer" class="navLinks contact">Contact</a>
+                        <a href="#" class="navLinks contact">
+                            Contact
+                        </a>
                     </li>
                 </ul>
 
