--- a/index.html
+++ b/index.html
@@ -55,35 +55,48 @@
 
                 <ul class="navList navListSm">
                     <li class="navItems">
-                        <a href="#" class="navLinks about">
-                            About 
-                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                        <div class="about">
+                            <a href="#" class="navLinks" role="button" onclick="displayingAboutDropdown()">
+                                About 
+                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                            </a>                    
                             <div class="dropdownList">
-                                <ul>
-                                    <li>
-                                        <a href="#">Skill</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Certification</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Educational Detais</a>
-                                    </li>
+                                <ul class="dropdownUorderedList">
+                                    <li class="dropdownListItems"><a href="#">Skill</a></li>
+                                    <li class="dropdownListItems"><a href="#">Certification</a></li>
+                                    <li class="dropdownListItems"><a href="#">Educational details</a></li>
                                 </ul>
-                            </div>                        
-                        </a>
+                            </div>
+                        </div>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks work">
-                            Work 
-                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
-                        </a>
+                        <div class="work">
+                            <a href="#" class="navLinks" role="button" onclick="displayingWorkDropdown()">
+                                Work 
+                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                            </a>
+                            <div class="dropdownList">
+                                <ul class="dropdownUorderedList">
+                                    <li class="dropdownListItems"><a href="#">Projects</a></li>
+                                    <li class="dropdownListItems"><a href="#">Hands on</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li class="navItems">
-                        <a href="#" class="navLinks galary">
-                            Galary 
-                            <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
-                        </a>
+                        <div class="galary">
+                            <a href="#" class="navLinks" role="button" onclick="displayingGalaryDropdown()">
+                                Galary 
+                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
+                            </a>
+                            <div class="dropdownList">
+                                <ul class="dropdownUorderedList">
+                                    <li class="dropdownListItems"><a href="#">Skill</a></li>
+                                    <li class="dropdownListItems"><a href="#">Certification</a> </li>
+                                    <li class="dropdownListItems"><a href="#">Educational details</a> </li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
                     <li class="navItems">
                         <a href="#" class="navLinks contact">
