--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ul class="navList navListSm">
                     <li class="navItems">
                         <div class="about">
-                            <a href="#" class="navLinks" role="button" onclick="displayingAboutDropdown()">
+                            <a href="#" class="navLinks">
                                 About 
                                 <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
                             </a>                    
@@ -71,7 +71,7 @@
                     </li>
                     <li class="navItems">
                         <div class="work">
-                            <a href="#" class="navLinks" role="button" onclick="displayingWorkDropdown()">
+                            <a href="#" class="navLinks">
                                 Work 
                                 <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
                             </a>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="navItems">
                         <div class="galary">
-                            <a href="#" class="navLinks" role="button" onclick="displayingGalaryDropdown()">
+                            <a href="#" class="navLinks">
                                 Galary 
                                 <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
                             </a>
@@ -228,6 +228,15 @@
 
 <!-- end of footer secction -->
 <!-- __________________________________________________________________________________________________ -->
+
+
+
+<div class="experiment">
+
+    <img class="experimentImg" src="/image/2.png"alt=""> 
+
+
+</div>
 
 
 
