added hover effect but still not able to do as i desire

--- a/index.html
+++ b/index.html
@@ -55,45 +55,43 @@
 
                 <ul class="navList navListSm">
                     <li class="navItems">
-                        <div class="about">
+                        <div class="about" onclick="displayingAboutDropdown()" onmouseover="displayingAboutDropdownHover()" onmouseout="hidingAboutDropdown()">
                             <a href="#" class="navLinks">
                                 About 
-                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
-                            </a>                    
-                            <div class="dropdownList">
-                                <ul class="dropdownUorderedList">
-                                    <li class="dropdownListItems"><a href="#">Skill</a></li>
-                                    <li class="dropdownListItems"><a href="#">Certification</a></li>
-                                    <li class="dropdownListItems"><a href="#">Educational details</a></li>
+                            </a>
+                            <div class="dropdown">
+                                <ul class="dropdownList">
+                                    <li class="dropdownItem"><a href="#">Skill</a></li>
+                                    <li class="dropdownItem"><a href="#">Certification</a></li>
+                                    <li class="dropdownItem"><a href="#">Educational details</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li class="navItems">
-                        <div class="work">
+                        <div class="work" onclick="displayingWorkDropdown()" onmouseover="displayingWorkDropdownHover()" onmouseout="hidingWorkDropdown()">
                             <a href="#" class="navLinks">
                                 Work 
-                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
                             </a>
-                            <div class="dropdownList">
-                                <ul class="dropdownUorderedList">
-                                    <li class="dropdownListItems"><a href="#">Projects</a></li>
-                                    <li class="dropdownListItems"><a href="#">Hands on</a></li>
+                            <div class="dropdown">
+                                <ul class="dropdownList">
+                                    <li class="dropdownItem"><a href="#">Skill</a></li>
+                                    <li class="dropdownItem"><a href="#">Certification</a></li>
+                                    <li class="dropdownItem"><a href="#">Educational details</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
                     <li class="navItems">
-                        <div class="galary">
+                        <div class="galary" onclick="displayingGalaryDropdown()" onmouseover="displayingGalaryDropdownHover()" onmouseout="hidingGalaryDropdown()">
                             <a href="#" class="navLinks">
                                 Galary 
-                                <span><i class="fa-solid fa-angle-down dropdownButton"></i></span>
                             </a>
-                            <div class="dropdownList">
-                                <ul class="dropdownUorderedList">
-                                    <li class="dropdownListItems"><a href="#">Skill</a></li>
-                                    <li class="dropdownListItems"><a href="#">Certification</a> </li>
-                                    <li class="dropdownListItems"><a href="#">Educational details</a> </li>
+                            <div class="dropdown">
+                                <ul class="dropdownList">
+                                    <li class="dropdownItem"><a href="#">Skill</a></li>
+                                    <li class="dropdownItem"><a href="#">Certification</a></li>
+                                    <li class="dropdownItem"><a href="#">Educational details</a></li>
                                 </ul>
                             </div>
                         </div>
